--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
   </head>
   <body>
     <h1>Cities I have lived</h1>
-     <ul>
+    <ul>
       <li>Morristown</li>
-        <p><span>Some text</span></p>
-        <dl>I grew up in this city</dl>
+      <p><span>I grew up in this city</span></p>
       <li>Keesler</li>
-        <dl>I went to tech school in this city</dl>
+      <p><span>I went to tech school in this city</span></p>
       <li>Colorado Springs!</li>
-        <dl>I am stationed at this city</dl>
-    </ul>  
+      <p><span>I am stationed at this city</span></p>
+    </ul>
     <h2>Cities I want to Visit</h2>
     <dl>These are the cities i would love to visit</dl>
     <ol>
-      <li>Las Vegas</li>
-        <dl>I would love to have the Hangover here</dl>
-      <li>New York</li>
-        <dl>New York sounds like a place for it's art culture and nastiness</dl>
-      <li>Morristown</li>
-        <dl>Seeing the family is always the best</dl>
+      <li><strong> Vegas</strong></li>
+      <dl>I would love to have the Hangover here</dl>
+      <li><em>New York</em></li>
+      <dl>New York sounds like a place for it's art culture and nastiness</dl>
+      <li><strong>Morristown</strong></li>
+      <dl>Seeing the family is always the best</dl>
     </ol>
-
+    <img class="fit-picture"
+     src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg"
+     alt="Grapefruit slice atop a pile of other slices">
   </body>
 </html>
