--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <a href="favorites.html">Another Page</a>
     <title>INDEX</title>
   </head>
   <body>
@@ -24,8 +25,10 @@
       <li><strong>Morristown</strong></li>
       <dl>Seeing the family is always the best</dl>
     </ol>
-    <img class="fit-picture"
-     src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg"
-     alt="Grapefruit slice atop a pile of other slices">
+    <img
+      class="fit-picture"
+      src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg"
+      alt="Grapefruit slice atop a pile of other slices"
+    />
   </body>
 </html>
